# PhaseField

./: .gitignore  README.md  `
.github/workflows/: cpp.yml
apps/kobayashi-cpu/: KobayashiCPU.cpp
apps/kobayashi-gpu/: CMakeLists.txt  KobayashiGPU.cu  vtk.h  wrapper.h
apps/mob/: CMakeLists.txt  Makefile  README.md  mob.cpp  mob.cu
apps/physical-gpu/: Makefile
kobayashi/cpu/: KobayashiCPU.cpp  Makefile
kobayashi/gpu/: KobayashiGPU.cu  Makefile
mobility/cpu/: Makefile  PhaseFieldCPU.cpp
mobility/gpu/: PhaseField.cu
physical/TravelingWave/: Makefile  TravelingWave.cpp
